--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Build APK for ${{ matrix.architecture }}
         run: |
           ARCH=$(echo "${{ matrix.architecture }}" | sed -E 's/^(.)(.*)$/\U\1\E\2/')
-          ./gradlew assemble${{ARCH}}Release \
+          ./gradlew assemble${ARCH}Release \
             -Psigning.keyAlias=${{ secrets.ALIAS }} \
             -Psigning.keyPassword=${{ secrets.KEY_PASSWORD }} \
             -Psigning.storeFile=$HOME/keystore.jks \
